@@ -67,6 +67,7 @@
 		<option name='hack_biospath' value='0'/>
 		<option name='hack_mngwrite' value='0'/>
 		<option name='hack_pinmame' value='0'/>
+		<option name='hack_softwarelist' value='0'/>
 	</global>
 	<mess>
 		<option name='executable' value='mess.exe'/>
